# Marketing4C

./: CMakeLists.txt  LICENSE  controller.c  controller.h  core.c  core.h  main.c  task.txt
components/: login.c  login.h
data/: category.txt  goods.txt  order.txt
definition/: category.c  category.h  goods.c  goods.h  login.c  login.h  order.c  order.h
